@@ -1040,7 +1040,7 @@ public final class MemcachedClient extends SpyThread {
 						// XXX:  Potential abstraction leak.
 						// The handling of incr/decr in the binary protocol
 						// Allows us to avoid string processing.
-						rv.set(new Long(s.isSuccess()?s.getMessage():"-1"));
+						rv.set(Long.valueOf(s.isSuccess() ? s.getMessage() : "-1"));
 					}
 					public void complete() {
 						latch.countDown();
